# garagem

./: .pdm.toml  db.sqlite3  pyproject.toml
config/: settings.py  urls.py
garagem/: admin.py  models.py  serializers.py  views.py
garagem/migrations/: 0001_initial.py  0002_categoria.py  0002_veiculo_fotos.py  0003_acessorio_cor.py  0003_veiculo_acessorio.py  0004_veiculo.py  0005_veiculo_modelo.py  0006_alter_cor_options.py  0007_alter_acessorio_options_rename_ano_veiculo_ano_and_more.py
garagem/models/: __init__.py  acessorio.py  marca.py  modelo.py  veiculo.py
garagem/serializers/: __init__.py  veiculo.py
garagem/views/: __init__.py  veiculo.py
uploader/migrations/: 0001_initial.py
usuario/migrations/: 0001_initial.py
